# armctl

./: .gitignore  .ruffignore  AGENTS.md  AgnosticController.py  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  __init__.py  agent.md  main.py  network_scanner.py  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
DobotRobotics/: DobotRobotics.py  __init__.py
ElephantRobotics/: ElephantRobotics.py  MyCobotPro600.py  __init__.py
Fanuc/: Fanuc.py  __init__.py
Templates/: SocketController.py  __init__.py  commands.py  communication.py  logger.py  templates.py
UniversalRobotics/: UniversalRobotics.py  __init__.py
agnostic_controller/: __init__.py  angle_utils.py
agnostic_controller/dobot/: dobot.py
agnostic_controller/elephant_robotics/: elephant_robotics.py
agnostic_controller/fanuc/: fanuc.py
agnostic_controller/jaka/: README.md  __init__.py  jaka.py
agnostic_controller/manipulators/: __init__.py  on_robot.py
agnostic_controller/templates/: commands.py  communication.py  socketcontroller.py
agnostic_controller/tools/: __init__.py  utils.py
agnostic_controller/universal_robotics/: __init__.py  universal_robotics.py  ur5.py
agnostic_controller/vention/: vention.py
armctl/: __init__.py  __main__.py  diy_robot.py  network_scanner.py
armctl/_blank/: README.md  __init__.py  robot.py
armctl/abb/: README.md  __init__.py  abb.py  abb_rapid_server.txt
armctl/abb/protocols/: rws.py
armctl/dobot/: README.md  __init__.py  dobot.py  m1_pro.py  magician.py
armctl/elephant_robotics/: elephant_robotics.py  mycobot.py
armctl/fanuc/: fanuc.py
armctl/jaka/: README.md  jaka.py
armctl/kuka/: kuka.py
armctl/templates/: __init__.py  commands.py  communication.py  plc_controller.py  properties.py  serial_controller.py  serialcontroller.py  socket_controller.py  socketcontroller.py
armctl/universal_robotics/: README.md  __init__.py  rtde.py  universal_robotics.py  ur5.py  urx.py
armctl/universal_robotics/manipulators/: __init__.py  on_robot.py
armctl/universal_robotics/protocols/: rtde.py
armctl/universal_robots/: README.md  __init__.py  universal_robots.py  urx.py
armctl/universal_robots/manipulators/: on_robot.py
armctl/universal_robots/protocols/: codes.py  config.py  config.xml  rtde.py  rtde_core.py  rtde_custom.py  rtde_official.py
armctl/utils/: __init__.py  angle.py  command_check.py  network_scanner.py  units.py
armctl/vention/: __init__.py  vention.py
armctl/zaber/: README.md  __init__.py  zaber.py
assets/diagrams/: template_overview.md
dobot/: __init__.py
elephant_robotics/: __init__.py  elephant_robotics.py  mycobot.py
tests/: _mock_robot.py  cli_test.py  main.py  test_cli.py  test_inheritance.py  test_logger.py  test_name_property.py  test_rtde_packets.py  test_serial_robot.py  test_socket_robot.py  test_ursim_docker.py  ur5_simple_test.py  ur_on_robot_grip.py  vention_simple_test.py
universal_robotics/: __init__.py  universal_robotics.py  ur5.py
vention/: __init__.py  vention.py
