[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "armctl"
version = "0.3.2"
description = "Agnostic Robotic Manipulator Controller (armctl)"
authors = [{ name = "Michael Gross", email = "MGross21@users.noreply.github.com" }]
readme = {file = "README.md", content-type = "text/markdown"}
license = { file = "LICENSE" }
keywords = ["robotics", "socket", "control", "automation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.9"
dependencies = [
    # "urrtde @ git+https://github.com/UniversalRobots/RTDE_Python_Client_Library.git@main"
]

[project.urls]
Homepage = "https://github.com/MGross21/armctl"
Tracker = "https://github.com/MGross21/armctl/issues"

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.4.0",
]

[tool.ruff]
line-length = 80
target-version = "py39"
lint.select = ["E", "F", "W", "I", "B", "UP", "N", "C90"]
lint.ignore = []
format.quote-style = "double"
format.indent-style = "space"
