[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "armctl"
module-root = ""

[project]
name = "armctl"
version = "0.3.2"
description = "Agnostic Robotic Manipulator Controller (armctl)"
authors = [{ name = "Michael Gross", email = "MGross21@users.noreply.github.com" }]
readme = {file = "README.md", content-type = "text/markdown"}
license = { file = "LICENSE" }
keywords = ["robotics", "socket", "control", "automation", "ur", "universal robotics", "jaka", "dobot", "elephant robotics", "vention", "fanuc"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta"

]
requires-python = ">=3.6"
dependencies = [
    # "urrtde @ git+https://github.com/UniversalRobots/RTDE_Python_Client_Library.git@main"
]

[project.urls]
Homepage = "https://github.com/MGross21/armctl"
Issues = "https://github.com/MGross21/armctl/issues"

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0;python_version>='3.11'",
    "pytest>=8.4.0;python_version>='3.11'"
]

[tool.ruff]
line-length = 80
target-version = "py39"
lint.select = ["E", "F", "W", "I", "B", "UP", "N", "C90"]
lint.ignore = []
format.quote-style = "double"
format.indent-style = "space"
