[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "armctl"
module-root = ""

[tool.uv.sources]
urrtde = { git = "https://github.com/UniversalRobots/RTDE_Python_Client_Library.git", rev = "main" }

[project]
name = "armctl"
version = "0.3.4"
description = "Agnostic Robotic Manipulation Controller (armctl)"
authors = [{ name = "Michael Gross", email = "MGross21@users.noreply.github.com" }]
readme = {file = "README.md", content-type = "text/markdown"}
license = { file = "LICENSE" }
keywords = ["robotics", "socket", "control", "automation", "ur", "universal robotics", "jaka", "dobot", "elephant robotics", "vention", "fanuc"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta"

]
requires-python = ">=3.6"
dependencies = [
    # "urrtde @ git+https://github.com/UniversalRobots/RTDE_Python_Client_Library.git@main"
    "urrtde",
    "typer>=0.9.0",
    "pyserial>=3.5",
    "zaber-motion>=2.13.1",
]

[project.urls]
Homepage = "https://github.com/MGross21/armctl"
Issues = "https://github.com/MGross21/armctl/issues"

[project.scripts]
armctl = "armctl.__main__:main"

[dependency-groups]
format = [
    "ruff>=0.4.0;python_version>='3.11'",
]

test = [
    "pytest>=6.0.0",
    "pytest-cov>=3.0.0",
]

dev = [
    {include-group = "format"},
    {include-group = "test"}
]

[tool.ruff]
line-length = 80
target-version = "py39"
lint.select = ["E", "F", "W", "I", "B", "UP", "N", "C90"]
lint.ignore = []
format.quote-style = "double"
format.indent-style = "space"
